basic styles added

--- a/src/app/shared/components/footer/footer.component.styl
+++ b/src/app/shared/components/footer/footer.component.styl
@@ -2,7 +2,7 @@
 
 .container {
   order: 0;
-  flex: 0 1 $header-height;
+  flex: 0 1 $footer-height;
   align-self: auto;
-  line-height: $header-height;
+  line-height: $footer-height;
 }
