--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<div class="page">
+  <app-header></app-header>
+  <main class="container">
+    <router-outlet></router-outlet>
+  </main>
+  <app-footer></app-footer>
+</div>
