--- a/src/variables.styl
+++ b/src/variables.styl
@@ -10,11 +10,11 @@ $page-bg-color = #fff;
 $header-height = 50px;
 
 /*
-  MAIN
- */
-
-
-/*
   FOOTER
  */
 $footer-height = 50px;
+
+/*
+  MAIN
+ */
+$main-max-height = calc(100% - 100px);
