--- a/src/app/views/quiz/question-list/components/question-item/question-item.component.html
+++ b/src/app/views/quiz/question-list/components/question-item/question-item.component.html
@@ -1,5 +1,17 @@
 <h3>{{ editMode ? 'Edit' : 'New' }} Question</h3>
 <form [formGroup]="questionForm" (ngSubmit)="onSubmit()">
+  <div class="row" style="display: none;">
+    <div class="col-12">
+      <div class="form-group">
+        <label for="Id">Id</label>
+        <input
+          type="number"
+          id="id"
+          formControlName="id"
+          class="form-control">
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-12">
       <button
@@ -19,8 +31,7 @@
           formControlName="question"
           class="form-control"
           rows="1"
-          #questionRef
-        ></textarea>
+          #questionRef></textarea>
       </div>
     </div>
   </div>
@@ -33,8 +44,19 @@
           id="hint"
           formControlName="hint"
           class="form-control"
-          #hintRef
-        >
+          #hintRef>
+      </div>
+    </div>
+  </div>
+  <div class="row" style="display: none;">
+    <div class="col-12">
+      <div class="form-group">
+        <label for="order">Order</label>
+        <input
+          type="number"
+          id="order"
+          formControlName="order"
+          class="form-control">
       </div>
     </div>
   </div>
