--- a/src/variables.styl
+++ b/src/variables.styl
@@ -1,8 +1,18 @@
 /*
+  COLORS
+ */
+$green = #28a745;
+$red = red;
+$gray = #dedede;
+
+/*
   GENERAL
  */
 $page-color = #333;
 $page-bg-color = #EAEAEA;
+$border-radius = 0;
+$input-radius = 0;
+$input-style = 1px solid $gray;
 
 /*
   HEADER
