--- a/src/app/views/quiz/question-list/components/question-item/question-item.component.html
+++ b/src/app/views/quiz/question-list/components/question-item/question-item.component.html
@@ -1,4 +1,8 @@
-<h3>{{ editMode ? 'Edit' : 'New' }} Question</h3>
+<div class="slanted">
+  <div class="slanted-top">
+    <h3>{{ editMode ? 'Edit' : 'New' }} Question</h3>
+  </div>
+</div>
 <form class="question-form" [formGroup]="questionForm" (ngSubmit)="onSubmit()">
   <div class="row question-toolbar float-right">
     <div class="col-12">
@@ -56,7 +60,6 @@
       </div>
     </div>
   </div>
-  <hr>
   <div class="row">
     <div class="col-12" formArrayName="answers">
       <h5>Answers</h5>
