--- a/src/app/views/quiz/question-list/question-list.component.html
+++ b/src/app/views/quiz/question-list/question-list.component.html
@@ -2,7 +2,11 @@
   <div class="questions-list col-6">
     <div class="row">
       <div class="col-12">
-        <h3>Question list</h3>
+        <div class="slanted">
+          <div class="slanted-top">
+            <h3>Question List</h3>
+          </div>
+        </div>
         <ul class="list-group" [sortablejs]="questions" [sortablejsOptions]="questionOptions">
           <div *ngFor="let question of questions"
              class="list-group-item"
