--- a/src/styles.styl
+++ b/src/styles.styl
@@ -53,7 +53,7 @@ html {
     height: 45px;
     margin: 0;
     color: #fff;
-    background: #8dc26f;
+    background: $green;
     z-index: 10;
   }
 }
@@ -64,7 +64,7 @@ html {
   top: 20px;
   left: 0;
   border: solid transparent;
-  border-top-color: #8DC26F;
+  border-top-color: $green;
   border-width: $h3-width 0 0 30px; /* left border (top as max box height) */
   width: 0;
   height: 0;
@@ -77,8 +77,8 @@ html {
 }
 .slanted-top:before {
   position: absolute;
-  top: 0;
+  top: 10px;
   border-color: transparent;
-  border-left-color: #8DC26F;
-  border-width: 20px 0 0 $h3-width; /* top border width+padding (left as box length) */
+  border-left-color: $green;
+  border-width: 10px 0 0 $h3-width; /* top border width+padding (left as box length) */
 }
