--- a/src/app/views/quiz/question-list/components/question-item/question-item.component.styl
+++ b/src/app/views/quiz/question-list/components/question-item/question-item.component.styl
@@ -1,25 +1,32 @@
 @import '../../../../../../variables.styl';
 
 .question-form {
-  padding: 30px;
+  padding: 30px 30px 15px 30px;
   background: #fff;
 
   .question-toolbar {
+    margin-top: 20px;
+    color: #fff;
+
     button {
       border: none;
-      background: none;
 
-      i {
-        font-size: 1.3em;
+      &.question-save {
+        background: $green;
       }
-
-      .fui-check {
-        color: $green;
-      }
-
-      .fui-cross {
-        color: $red;
+      &.question-cancel {
+        background: $gray;
       }
     }
+  }
+
+  i, label {
+    height: 38px;
+    line-height: 38px;
+    font-size: 16px;
+  }
+
+  .add-handle {
+    margin-left: 10px;
   }
 }
