--- a/src/app/views/quiz/question-list/components/question-item/question-item.component.html
+++ b/src/app/views/quiz/question-list/components/question-item/question-item.component.html
@@ -67,7 +67,7 @@
         <div class="col-3">
           <input type="checkbox"
             class="form-control"
-            formControlName="correct"
+            formControlName="isCorrect"
           ><label>Is correct?</label>
         </div>
         <div class="col-1">
