--- a/src/app/views/quiz/question-list/question-list.component.styl
+++ b/src/app/views/quiz/question-list/question-list.component.styl
@@ -13,8 +13,6 @@
     .list-group-item {
       border-radius: $border-radius;
       border: none;
-      //border-top: 1px solid #dcdcdc;
-      //border-bottom: 1px solid #dcdcdc;
       outline: none;
       cursor: pointer;
 
@@ -34,7 +32,7 @@
   }
 
   .drag-handle {
-    //opacity: 0;
+    opacity: 0;
     cursor: grab;
   }
 
