--- a/src/styles.styl
+++ b/src/styles.styl
@@ -43,6 +43,14 @@ html {
       cursor: pointer;
     }
 
+    .btn-success {
+      background: $green;
+
+      &[disabled] {
+        background:
+      }
+    }
+
     .page {
       display: flex;
       height: 100%;
