--- a/src/styles.styl
+++ b/src/styles.styl
@@ -27,6 +27,10 @@ html {
       display: inline-block;
     }
 
+    .active {
+      background: $header-bg;
+    }
+
     .fui-check, .fui-plus {
       color: $green;
     }
