--- a/src/variables.styl
+++ b/src/variables.styl
@@ -18,7 +18,9 @@ $input-style = 1px solid $gray;
 /*
   HEADER
  */
-$header-height = 50px;
+$header-height = 30px;
+$header-bg = linear-gradient(to right, #396afc, #2948ff);
+$header-color = #fff;
 
 /*
   FOOTER
