--- a/src/app/views/quiz/question-list/question-list.component.html
+++ b/src/app/views/quiz/question-list/question-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="questions-list col-6">
+  <div class="questions-list col-sm-12 col-lg-6">
     <div class="row">
       <div class="col-12">
         <div class="slanted">
@@ -28,7 +28,7 @@
       </div>
     </div>
   </div>
-  <div class="col-6">
+  <div class="col-sm-12 col-lg-6">
     <router-outlet></router-outlet>
   </div>
 </div>
