--- a/src/app/shared/components/auth/signup/signup.component.html
+++ b/src/app/shared/components/auth/signup/signup.component.html
@@ -1,15 +1,22 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-8 col-sm-offset-1 col-md-offset-2">
-    <form (ngSubmit)="onSignup(f)" #f="ngForm">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="text" id="email" name="email" class="form-control" ngModel>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" class="form-control" ngModel>
-      </div>
-      <button class="btn btn-primary" type="submit">Sign Up</button>
-    </form>
+<div class="col-md-6 mx-auto">
+  <div class="slanted">
+    <div class="slanted-top">
+      <h3>Register</h3>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+      <form (ngSubmit)="onSignup(f)" #f="ngForm">
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="text" id="email" name="email" class="form-control" ngModel>
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" class="form-control" ngModel>
+        </div>
+        <button class="btn btn-primary" type="submit">Register</button>
+      </form>
+    </div>
   </div>
 </div>
