--- a/src/app/views/quiz/quiz-end/quiz-end.component.html
+++ b/src/app/views/quiz/quiz-end/quiz-end.component.html
@@ -1,3 +1,12 @@
-<p>
-  quiz-end works!
-</p>
+<div class="quiz-card col-md-6 mx-auto">
+  <div class="slanted">
+    <div class="slanted-top">
+      <h3>The End</h3>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+
+    </div>
+  </div>
+</div>
