--- a/src/app/views/quiz/quiz-start/quiz-start.component.html
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.html
@@ -1,3 +1,12 @@
-<p>
-  quiz-start works!
-</p>
+<div class="quiz-card col-md-6 mx-auto">
+  <div class="slanted">
+    <div class="slanted-top">
+      <h3>Start Quiz</h3>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-body">
+
+    </div>
+  </div>
+</div>
