--- a/src/styles.styl
+++ b/src/styles.styl
@@ -10,7 +10,8 @@ html {
     color: $page-color;
     background: $page-bg-color;
 
-    input, textarea, button {
+    input, textarea, button,
+    .card, .card-header, .card-footer {
       border: none;
       border: $input-style !important;
       border-radius: $input-radius !important;
