quiz end card updated

--- a/src/app/views/quiz/quiz-end/quiz-end.component.html
+++ b/src/app/views/quiz/quiz-end/quiz-end.component.html
@@ -5,8 +5,17 @@
     </div>
   </div>
   <div class="card">
+    <div class="card-header text-center text-white"
+         [ngStyle]="{'background': quiz.imagePath && quiz.imagePath.length > 0 ? 'url(' + quiz.imagePath + ')' : 'linear-gradient(to top, #30cfd0 0%, #330867 100%)'}">
+      <h2 class="highlighted">Well done!</h2>
+    </div>
     <div class="card-body">
-
+      <p class="card-text">Your score is <strong>30 / 32</strong></p>
+      <p class="card-text">You've answered <strong>85%</strong> of the questions correct!</p>
+    </div>
+    <div class="card-footer text-center">
+      <button routerLink="/quiz/start"
+              class="btn btn-success">Try Again</button>
     </div>
   </div>
 </div>
