--- a/src/app/views/quiz/quiz-start/quiz-start.component.html
+++ b/src/app/views/quiz/quiz-start/quiz-start.component.html
@@ -19,7 +19,7 @@
           <p class="card-text">Quiz options:</p>
           <div class="row quiz-show-progress">
             <div class="col-1"><input type="checkbox" #progressInput></div>
-            <div class="col-11 text-left"><p>Show progress</p></div>
+            <div class="col-11 text-left"><p>Track progress</p></div>
           </div>
           <div class="row quiz-random">
             <div class="col-1"><input type="checkbox" #randomInput></div>
